Fail late if cluster_config task fails
Partially fixes #321

The email_alerts and syslog_servers needs to be updated to tolerate
partial failure.

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/roles/cluster_config/meta/argument_specs.yml
+++ b/roles/cluster_config/meta/argument_specs.yml
@@ -4,6 +4,9 @@ argument_specs:
     short_description: Configure HyperCore cluster
     description:
       - Role cluster_config can be used to fully configure a new HyperCore server, or partially reconfigure an existing HyperCore server.
+      - The role will continue with cluster configuration tasks if one of tasks fail,
+        to apply as many changes as possible.
+        Whole role will still exit with error.
     options:
       cluster_config_configuration: &cluster_config_configuration
         description:
