--- a/tests/integration/targets/syslog_server/tasks/01_syslog_server_info.yml
+++ b/tests/integration/targets/syslog_server/tasks/01_syslog_server_info.yml
@@ -5,10 +5,28 @@
     SC_PASSWORD: "{{ sc_config[sc_host].sc_password }}"
   vars:
     # payload to be POST-ed to api
+    # we cannot set port using api module
     syslog_server_config_5:
       host: 1.2.3.5
       # port: 43
       protocol: tcp
+    syslog_server_config_3_514_udp:
+      host: 1.2.3.3
+      # port: 514
+      protocol: udp
+    syslog_server_config_2_514_udp:
+      host: 1.2.3.2
+      # port: 514
+      protocol: udp
+    syslog_server_config_3_510_udp:
+      host: 1.2.3.3
+      # port: 510
+      protocol: udp
+    syslog_server_config_3_514_tcp:
+      host: 1.2.3.3
+      # port: 514
+      protocol: tcp
+
 
   block:
     # -------------------------------------------------------
@@ -26,12 +44,24 @@
           - syslog_servers.records == []
 
     # -------------------------------------------------------
+    # Test with 0 AlertSyslogTarget objects
+    - name: Retrieve info about Syslog servers - count=0
+      scale_computing.hypercore.syslog_server_info:
+      register: syslog_servers
+    - ansible.builtin.debug:
+        msg: "{{ syslog_servers.records }}"
+    - name: Assert syslog_server_info with 1 server
+      ansible.builtin.assert:
+        that:
+          - syslog_servers.records == []
+
+    # -------------------------------------------------------
     # Test with 1 AlertSyslogTarget object
     - include_tasks: helper_api_syslog_server_create_one.yml
       vars:
         syslog_server_config: "{{ syslog_server_config_5 }}"
 
-    - name: Retrieve info about Syslog servers
+    - name: Retrieve info about Syslog servers - count=1
       scale_computing.hypercore.syslog_server_info:
       register: syslog_servers
     - ansible.builtin.debug:
@@ -47,3 +77,47 @@
           - syslog_servers.records[0].host == "1.2.3.5"
           - syslog_servers.records[0].port == 514
           - syslog_servers.records[0].protocol == "tcp"
+
+    # -------------------------------------------------------
+    # Test with N objects, is output sorted?
+    - include_tasks: helper_api_syslog_server_create_one.yml
+      vars:
+        syslog_server_config: "{{ item }}"
+      loop:
+        - "{{ syslog_server_config_3_514_udp }}"
+        - "{{ syslog_server_config_2_514_udp }}"
+        - "{{ syslog_server_config_3_510_udp }}"
+        - "{{ syslog_server_config_3_514_tcp }}"
+
+    - name: Retrieve info about Syslog servers - count=5
+      scale_computing.hypercore.syslog_server_info:
+      register: syslog_servers
+    - ansible.builtin.debug:
+        msg: "{{ syslog_servers.records }}"
+    - name: Assert syslog_server_info with N servers
+      ansible.builtin.assert:
+        that:
+          - syslog_servers.records | length == 5
+          - syslog_servers.records[0].keys() | sort ==
+            ['alert_tag_uuid', 'host', 'latest_task_tag', 'port',
+            'protocol', 'resend_delay', 'silent_period', 'uuid']
+
+          - syslog_servers.records[0].host == "1.2.3.2"  # <--
+          - syslog_servers.records[0].port == 514
+          - syslog_servers.records[0].protocol == "udp"
+
+          - syslog_servers.records[1].host == "1.2.3.3"
+          - syslog_servers.records[1].port == 514
+          - syslog_servers.records[1].protocol == "tcp"  # <--
+
+          - syslog_servers.records[2].host == "1.2.3.3"
+          - syslog_servers.records[2].port == 514        # should be 510, but we cannot set port via API module
+          - syslog_servers.records[2].protocol == "udp"
+
+          - syslog_servers.records[3].host == "1.2.3.3"  # <--
+          - syslog_servers.records[3].port == 514
+          - syslog_servers.records[3].protocol == "udp"
+
+          - syslog_servers.records[4].host == "1.2.3.5"
+          - syslog_servers.records[4].port == 514
+          - syslog_servers.records[4].protocol == "tcp"
