CI split cluster_config role into smaller files
To easily comment out part of test.

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/targets/role_cluster_config/tasks/main.yml
+++ b/tests/integration/targets/role_cluster_config/tasks/main.yml
@@ -197,112 +197,10 @@
       when: not sc_config[sc_host].features.cluster_name.is_writable
 
     # ====================================================================================
-    # -----------------------------------------------------------------
-    # Apply cluster config A and test
-    - name: Apply and test cluster_config_a
-      include_tasks: apply_and_test.yml
-      vars:
-        dbg_suffix: "cluster_config_a"
-        cluster_config_applied: "{{ cluster_config_a }}"
-        cluster_config_expected: "{{ cluster_config_a }}"
-        cluster_config_role_failure_expected: False
-
-    # -----------------------------------------------------------------
-    # Apply cluster_config_nochange and test
-    - name: Apply and test cluster_config_nochange_1 a
-      include_tasks: apply_and_test.yml
-      vars:
-        dbg_suffix: "cluster_config_nochange_1 - a"
-        cluster_config_applied: "{{ cluster_config_nochange_1 }}"
-        cluster_config_expected: "{{ cluster_config_a }}"
-
-    - name: Apply and test cluster_config_nochange_2 a
-      include_tasks: apply_and_test.yml
-      vars:
-        dbg_suffix: "cluster_config_nochange_2 - a"
-        cluster_config_applied: "{{ cluster_config_nochange_2 }}"
-        cluster_config_expected: "{{ cluster_config_a }}"
-
-    - name: Apply and test cluster_config_nochange_3 a
-      include_tasks: apply_and_test.yml
-      vars:
-        dbg_suffix: "cluster_config_nochange_3 - a"
-        cluster_config_applied: "{{ cluster_config_nochange_3 }}"
-        cluster_config_expected: "{{ cluster_config_a }}"
-
-    - name: Apply and test cluster_config_nochange_4 a
-      include_tasks: apply_and_test.yml
-      vars:
-        dbg_suffix: "cluster_config_nochange_4 - a"
-        cluster_config_applied: "{{ cluster_config_nochange_4 }}"
-        cluster_config_expected: "{{ cluster_config_a }}"
-
-    # -----------------------------------------------------------------
-    # Apply cluster_config_empty and test
-    - name: Apply and test cluster_config_empty
-      include_tasks: apply_and_test.yml
-      vars:
-        dbg_suffix: "cluster_config_empty - a"
-        cluster_config_applied: "{{ cluster_config_empty }}"
-        # we expect old configuration (cluster_config_a) to be partially replaced by empty values from cluster_config_empty
-        cluster_config_expected: "{{ cluster_config_a | combine(cluster_config_empty) }}"
-
-    # ====================================================================================
-    # -----------------------------------------------------------------
-    # Apply cluster config B and test
-    - name: Apply and test cluster_config_b
-      include_tasks: apply_and_test.yml
-      vars:
-        dbg_suffix: "cluster_config_b"
-        cluster_config_applied: "{{ cluster_config_b }}"
-        cluster_config_expected: "{{ cluster_config_b }}"
-
-    # -----------------------------------------------------------------
-    # Apply cluster_config_nochange and test
-    - name: Apply and test cluster_config_nochange_1 b
-      include_tasks: apply_and_test.yml
-      vars:
-        dbg_suffix: "cluster_config_nochange_1 - b"
-        cluster_config_applied: "{{ cluster_config_nochange_1 }}"
-        cluster_config_expected: "{{ cluster_config_b }}"
-
-    - name: Apply and test cluster_config_nochange_2 b
-      include_tasks: apply_and_test.yml
-      vars:
-        dbg_suffix: "cluster_config_nochange_2 - b"
-        cluster_config_applied: "{{ cluster_config_nochange_2 }}"
-        cluster_config_expected: "{{ cluster_config_b }}"
-
-    # ====================================================================================
-    # -----------------------------------------------------------------
-    # Partially apply cluster config A and test
-    # Start with empty cluster_config_partial, then gradually change it to cluster_config_a, one attribute at a time.
-    - ansible.builtin.set_fact:
-        cluster_config_expected: "{{ cluster_config_b }}"
-
-    - ansible.builtin.include_tasks: partial_update.yml
-      vars:
-        cluster_config_partial_update: "{{ {item.key: item.value} }}"
-      loop: "{{ cluster_config_a | dict2items }}"
-
-    # ====================================================================================
-    # -----------------------------------------------------------------
-    # Apply configuration with error, test only problematic setting was not applied
-    - name: Apply and test cluster_config_a_error
-      include_tasks: apply_and_test.yml
-      vars:
-        dbg_suffix: "cluster_config_a_error"
-        cluster_config_applied: "{{ cluster_config_a_error_applied }}"
-        cluster_config_expected: "{{ cluster_config_a_error_expected }}"
-        cluster_config_role_failure_expected: True
-
-    - name: Apply and test cluster_config_b_error
-      include_tasks: apply_and_test.yml
-      vars:
-        dbg_suffix: "cluster_config_b_error"
-        cluster_config_applied: "{{ cluster_config_b_error_applied }}"
-        cluster_config_expected: "{{ cluster_config_b_error_expected }}"
-        cluster_config_role_failure_expected: True
+    - include_tasks: 01_cluster_config_a.yml
+    - include_tasks: 02_cluster_config_b.yml
+    - include_tasks: 03_partial.yml
+    - include_tasks: 04_fail_late.yml
 
     # ====================================================================================
     # Revert to configuration from integration_config.yml
