CI bump docker image
python 3.12
ansible 2.17
ansible-lint 24.2
mypy 1.10
pytest 8.2

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/ci-infra/docker-image/Dockerfile
+++ b/ci-infra/docker-image/Dockerfile
@@ -1,15 +1,15 @@
 # Usage: build new image locally, push it to gcr, use it in CI. and
 
 # we use 'pip install name~=1.2.0' to install latest 1.2.x release
-ARG ANSIBLE_CORE_VERSION=2.16.0
+ARG ANSIBLE_CORE_VERSION=2.17.0
 
 # =======================================================================
-FROM python:3.10-slim-buster
+FROM python:3.12-slim-bookworm
 ARG ANSIBLE_CORE_VERSION
 
 ENV LANG=en_US.UTF-8
 
-RUN apt update && apt install -y git make smbclient genisoimage qemu-utils jq sudo procps locales
+RUN apt update && apt install -y git make smbclient genisoimage qemu-utils jq sudo procps locales rsync
 RUN sed -i '/en_US.UTF-8/s/^# //' /etc/locale.gen && locale-gen
 RUN pip install --upgrade pip wheel
 
