--- a/examples/vm_snapshot_special_cleanup.yml
+++ b/examples/vm_snapshot_special_cleanup.yml
@@ -6,7 +6,7 @@
   vars:
     # This variable is used to filter and delete snapshots.
     # All snapshots with 'use_label' will be DELETED.
-    use_label: 'TEST'
+    use_label: TEST
 
   tasks:
   # ------------------------------------------------------
