--- a/examples/snapshot_schedule.yml
+++ b/examples/snapshot_schedule.yml
@@ -1,3 +1,4 @@
+---
 - name: Create VM
   hosts: localhost
   connection: local
@@ -10,10 +11,10 @@
         state: present
         recurrences:
           - name: weekly-tuesday
-            frequency: "FREQ=WEEKLY;INTERVAL=1;BYDAY=TU"  # RFC-2445
+            frequency: FREQ=WEEKLY;INTERVAL=1;BYDAY=TU # RFC-2445
             start: "2010-01-01 00:00:00"
-            local_retention: "{{ 10 * 7 * 24 * 60 * 60 }}"  # 10 days, unit seconds
-            remote_retention:  # optional, None or 0 means same as local_retention.
+            local_retention: "{{ 10 * 7 * 24 * 60 * 60 }}" # 10 days, unit seconds
+            remote_retention: # optional, None or 0 means same as local_retention.
       register: demo_snapshot_schedule
 
     - name: Show snapshot_schedule module output
@@ -35,4 +36,4 @@
           Snapshot schedule {{ demo_snapshot_schedule.record.name }} has local retention
           {{ demo_snapshot_schedule.record.recurrences.0.local_retention }} [sec] -
           syntax valid after release >= 3.0.0
-      when: false  # 3.0.0 is not yet released
+      when: false # 3.0.0 is not yet released
