--- a/examples/vm_os_upgrade/04_setup_source_vm.yml
+++ b/examples/vm_os_upgrade/04_setup_source_vm.yml
@@ -1,3 +1,4 @@
+---
 - name: Report uptime
   ansible.builtin.command: uptime
 
@@ -9,7 +10,7 @@
 # # Firewall needs to be opened
 - name: Check index.html is served to external host
   ansible.builtin.uri:
-    url: "http://{{ ansible_default_ipv4.address }}"
+    url: http://{{ ansible_default_ipv4.address }}
     return_content: true
   delegate_to: localhost
   register: url_data
