--- a/roles/check_local_time/meta/main.yml
+++ b/roles/check_local_time/meta/main.yml
@@ -1,9 +1,10 @@
+---
 galaxy_info:
   author: Polona Mihalic <polona.mihalic@xlab.si>
   role_name: check_local_time
   description: Check if local time is within given time interval
   license: GPL-3.0-or-later
-  min_ansible_version: "2.15.0"
+  min_ansible_version: 2.15.0
   platforms:
     - name: GenericLinux
       versions:
