--- a/roles/url2template/meta/main.yml
+++ b/roles/url2template/meta/main.yml
@@ -1,9 +1,10 @@
+---
 galaxy_info:
   author: Justin Cinkelj <justin.cinkelj@xlab.si>
   role_name: url2template
   description: Download VM image from URL and create a template VM
   license: GPL-3.0-or-later
-  min_ansible_version: "2.15.0"
+  min_ansible_version: 2.15.0
   platforms:
     - name: GenericLinux
       versions:
