--- a/roles/version_update_single_node/meta/main.yml
+++ b/roles/version_update_single_node/meta/main.yml
@@ -1,9 +1,10 @@
+---
 galaxy_info:
   author: Ana Zobec <ana.zobec@xlab.si>
   role_name: version_update_single_node
   description: Update version on Scale Computing HyperCore cluster
   license: GPL-3.0-or-later
-  min_ansible_version: "2.15.0"
+  min_ansible_version: 2.15.0
   platforms:
     - name: GenericLinux
       versions:
